# 2048-tui

./: .gitignore  DECISIONS.md  DOGFOOD.md  Makefile  README.md  demo.tape  play.py  pyproject.toml  pyrightconfig.json
screenshots/: README.md  endscreen.tcell  gameplay.tcell  hero.tcell
tests/: perf.py  playtest.py  qa.py
twenty48_tui/: __init__.py  app.py  engine.py  music.py  rules.py  screens.py  sounds.py  state.py  tiles.py  tui.tcss
