[project]
name = "twenty48-tui"
version = "0.1.0"
description = "Terminal 2048 with Textual — tile merger with animation, undo, best-score"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.80,<10",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["twenty48_tui"]

[tool.setuptools.package-data]
twenty48_tui = [
    "tui.tcss",
    "assets/music/*.mp3",
    "assets/sound/*.wav",
]
